# opaf-python

./: .flake8  .gitignore  README.md  pyproject.toml  setup.py
opaf/: actions.opaf  helpers.py  opaf.py  utils.py
src/opaf/: opaf.py
src/opaf/lib/: __init__.py  actions.opaf  opaf_action.py  opaf_block.py  opaf_chart.py  opaf_color.py  opaf_compiler.py  opaf_component.py  opaf_config.py  opaf_document.py  opaf_funcs.py  opaf_helpers.py  opaf_image.py  opaf_metadata.py  opaf_packager.py  opaf_parser.py  opaf_utils.py  opaf_value.py  utils.py
src/opaf/lib/metadata/: __init__.py  utils.py
