[project]
name = "opaf"
version = "0.1.0"
description = "An XML based knitting pattern format specification and tooling"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["opaf", "pattern", "knitting"]
authors = [
  {name = "Scott Ware"}
]
maintainers = [
  {name = "Scott Ware"}
]

[project.urls]
homepage = "https://github.com/open-pattern-format/opaf"
documentation = "https://github.com/open-pattern-format/opaf/wiki"
repository = "https://github.com/open-pattern-format/opaf"
namespace = "https://github.com/open-pattern-format/opaf/wiki"

[project.scripts]
opaf = "opaf.opaf:main"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]