[project]
name = "opaf"
version = "0.4.0"
description = "An XML based knitting pattern format specification and tooling"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = ["opaf", "pattern", "knitting"]
authors = [
  {name = "Scott Ware"}
]
maintainers = [
  {name = "Scott Ware"}
]
dependencies = [
  "packaging >= 24.0",
  "pillow >= 10.2.0",
]

[project.urls]
homepage = "https://openpatternformat.com"
documentation = "https://docs.openpatternformat.com"
repository = "https://github.com/open-pattern-format/opaf-python"
namespace = "https://github.com/open-pattern-format/opaf"

[project.scripts]
opaf = "opaf.opaf:main"

[build-system]
requires = ["setuptools >= 61.0.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
